# EnGPar

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  apfGraph.cpp  config.sh  engpar-config-ray-gnu.sh  engpar.dox  minimal_config.sh  mpich3.supp  ray-gpu-gnu.env
.github/workflows/: update-docs.yml
agi/: CMakeLists.txt  Edge.h  EdgeIterator.h  GraphIterator.h  PinIterator.h  agi.cpp  agi.h  agiBalancer.cpp  agiBalancer.h  agiConstruct.cpp  agiEdge.cpp  agiIO.cpp  agiInfo.h  agiIterate.cpp  agiMigrate.cpp  agiMigrate2.cpp  agiMigration.cpp  agiMigration.h  agiMigrationTimers.cpp  agiMigrationTimers.h  agiTag.cpp  agiVTK.cpp  agiValid.cpp  agiVertex.cpp  agiWeightMigrate.cpp  agiWeightMigration.cpp  agi_typeconvert.cpp  agi_typeconvert.h  agi_types.h  migrate.cpp  ngraph.cpp  ngraph.h  pngraph.h
agi/Iterators/: EdgeIterator.h  GraphIterator.h  HyperEdgeIterator.h  PinIterator.h
cdash/: CTestConfig.cmake  Project.xml  cmake_log.txt  modules.txt  nightly.cmake  nightly.sh
cmake/: FindParmetis.cmake  detect_trilinos_opts.cmake
docs/: README.md  _config.yml  about.md  index.html  params.json
docs/_layouts/: default.html
docs/_posts/: 2016-8-5-ATPESC.md  2016-9-6-ThetaWorkshop.md  2016-9-8-SuperComputing.md  2017-11-10-SC17.md  2017-11-10-SuperComputing.md  2017-2-13-SIAMCSE17.md  2019-10-29-SC19.md
ftn/: CMakeLists.txt  engpar.f90
interfaces/: #apfGraph.cpp#  .#apfGraph.cpp  CMakeLists.txt  apfGraph.cpp  apfGraph.h  binGraph.cpp  binGraph.h  cengpar.cpp  cengpar.h  dofGraph.cpp
metrics/: README.md  getRepoStats.api4.sh  getRepoStats.sh  plot.gplt  plot.sh
ngraph/: CMakeLists.txt
ngraph/cmake/: FindSCOREC.cmake
ngraph/interfaces/: apfGraph.cpp  apfGraph.h
ngraph/test/: CMakeLists.txt  buildMeshGraph.cpp
partition/: CMakeLists.txt  engpar.cpp  engpar.h  engpar_input.cpp  engpar_input.h  engpar_ptn_types.h  engpar_split.cpp  engpar_split.h  engpar_types.h
partition/Coloring/: CMakeLists.txt  engpar_coloring_input.h  engpar_kokkosColoring.cpp  engpar_kokkosColoring.h
partition/Diffusive/: CMakeLists.txt  engpar.cpp  engpar.h  engpar_diffusive_input.cpp  engpar_diffusive_input.h  engpar_weight_input.cpp  engpar_weight_input.h
partition/Diffusive/src/: engpar_balancer.cpp  engpar_balancer.h  engpar_container.h  engpar_input.cpp  engpar_make.cpp  engpar_queue.cpp  engpar_queue.h  engpar_sd.cpp  engpar_selector.cpp  engpar_selector.h  engpar_sides.h  engpar_targets.h  engpar_vtxBalancer.cpp  engpar_weightBalancer.cpp  engpar_weightSelector.cpp  engpar_weightSelector.h  engpar_weights.h  writeCavity.cpp  writeCavity.h
partition/Metrics/: CMakeLists.txt  engpar_metrics.cpp  engpar_metrics.h
partition/Multilevel/: CMakeLists.txt  engpar_parmetis.cpp  engpar_parmetis.h  engpar_split.cpp  engpar_split_input.h  engpar_zoltan.cpp  engpar_zoltan.h
partition/src/: engpar_balancer.cpp  engpar_balancer.h  engpar_bounds.h  engpar_container.h  engpar_edgeBounds.cpp  engpar_input.cpp  engpar_make.cpp  engpar_queue.cpp  engpar_queue.h  engpar_sd.h  engpar_selector.cpp  engpar_selector.h  engpar_sides.h  engpar_targets.cpp  engpar_targets.h  engpar_vtxBalancer.cpp  engpar_vtxBounds.h  engpar_vtxWeights.cpp  engpar_vtxWeights.h  engpar_weights.h
pcu/: CMakeLists.txt
ssg/: CMakeLists.txt  sellCSigma.h  ssgConvert.cpp  ssg_types.h
support/: CMakeLists.txt  cengpar.cpp  cengpar.h  engpar_log.cpp  engpar_memory.cpp  engpar_message.cpp  engpar_reduce.cpp  engpar_reduce.h  engpar_sort.cpp  engpar_sort.h  engpar_support.cpp  engpar_support.h  engpar_types.h  engpar_version.cpp.in  engpar_version.h  engpar_version.h.in
test/: .kokkosMeshBfs.cpp.swp  CMakeLists.txt  ConstructTestSuite.cpp  NgraphTestSuite.cpp  PartitionTestSuite.cpp  TestingSuite.cpp  TestingSuite.h  addCoords.cpp  balance.cpp  balanceDOFMesh.cpp  balanceMesh.cpp  balanceMultiple.cpp  balanceWeights.cpp  bfsSearch.cpp  bfs_baseline.cpp  buildBinaryGraph.cpp  buildFUN3DGraph.cpp  buildGraphs.cpp  buildGraphs.h  buildMeshGraph.cpp  constructAndPartition.cpp  constructGraph.cpp  cutVertex.cpp  edgeTraversal.cpp  eveParallel.cpp  ftnTest.f90  gatherGraphs.cpp  gatherGraphs.h  kokkosBfs.cpp  kokkosBfs.h  kokkosColoring.cpp  kokkosFor.cpp  kokkosHelloWorld.cpp  kokkosMeshBfs.cpp  kokkosMeshColoring.cpp  kokkosMeshColoringBdry.cpp  local_split.cpp  ngraphToSsg.cpp  pagerank.cpp  render.cpp  (+15 more)
zoltan/: CMakeLists.txt  ZoltanCallbacks.cpp  ZoltanCallbacks.h  ZoltanCutVertex.cpp  ZoltanCutVertex.h  ZoltanShell.cpp
